fix: navigation active class on dark mode
Fix navigation active class color on dark mode

--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -45,3 +45,7 @@
 .active {
   background-color: #f1f1f1 !important;
 }
+
+.dark-mode-active.active {
+  background-color: #717171 !important;
+}
